--- a/apps/ui/src/app/pages/nwp-settings/nwp-settings.component.scss
+++ b/apps/ui/src/app/pages/nwp-settings/nwp-settings.component.scss
@@ -40,10 +40,13 @@ mat-radio-button {
 .settings-list {
   li {
     color: #fff;
-    background-color: red;
     display: flex;
     flex-direction: row;
-    padding: 15px;
+    padding: 7px 15px;
+
+    &:nth-child(odd) {
+      background-color: rgba(255, 255, 255, 0.15);
+    }
 
     .name {
       flex-grow: 1;
@@ -61,6 +64,8 @@ mat-radio-button {
   max-width: 1024px;
   margin-left: auto;
   margin-right: auto;
+  height: 90%;
+  overflow: auto;
 }
 
 .plugin-settings {
