--- a/apps/ui/src/styles.scss
+++ b/apps/ui/src/styles.scss
@@ -18,7 +18,7 @@ body {
   bottom: 0;
   overflow: auto;
   -webkit-overflow-scrolling: touch;
-  //@include nwp-scroller();
+  @include nwp-scroller();
 }
 
 .webview {
