Vibrancy blur can now be disabled Improved setup page

--- a/apps/ui/src/app/pages/nwp-welcome/nwp-welcome.component.html
+++ b/apps/ui/src/app/pages/nwp-welcome/nwp-welcome.component.html
@@ -1,5 +1,5 @@
 <div class="bg-container">
-  <img class="bg" src="assets/bg.jpg"/>
+  <img class="bg" src="assets/wave.svg"/>
 </div>
 <div class="container">
   <div class="center">
