--- a/apps/ui/src/app/pages/setup/nwp-setup.component.html
+++ b/apps/ui/src/app/pages/setup/nwp-setup.component.html
@@ -1,5 +1,5 @@
 <div class="bg-container">
-  <img alt="" class="bg" src="assets/bg.jpg">
+  <img alt="" class="bg" src="assets/wave.svg">
 </div>
 <div
   class="center"
