--- a/apps/ui/src/app/pages/setup/nwp-setup.component.scss
+++ b/apps/ui/src/app/pages/setup/nwp-setup.component.scss
@@ -12,15 +12,14 @@
 
   .bg {
     position: absolute;
-    left: -30px;
-    right: -30px;
-    top: -30px;
-    bottom: -30px;
-    width: calc(100% + 60px);
-    height: calc(100% + 60px);
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     object-fit: cover;
     object-position: center;
-    filter: blur(10px) saturate(1.5);
+    height: 100%;
+    width: 100%;
   }
 }
 
@@ -36,9 +35,8 @@
   height: 200px;
   width: 50vw;
   max-width: 800px;
-  @include vibrancy-dark-mixin();
   overflow: auto;
-
+  background-color: rgba(0, 0, 0, 0.25);
   h1 {
     font-size: 2rem;
     color: #fff;
