Fixed Broken Collections

--- a/apps/ui/src/app/pages/nwp-collection/nwp-collection.component.scss
+++ b/apps/ui/src/app/pages/nwp-collection/nwp-collection.component.scss
@@ -4,6 +4,8 @@
   .page-container {
     width: 100%;
     box-sizing: border-box;
+    height: 100%;
+    overflow: auto;
 
     h2 {
       color: #fff;
