--- a/apps/ui/src/app/pages/nwp-item/nwp-item.component.scss
+++ b/apps/ui/src/app/pages/nwp-item/nwp-item.component.scss
@@ -58,6 +58,7 @@
   width: 100%;
   opacity: 0.25;
   filter: blur(5px);
+  display: none;
 }
 
 .right {
@@ -105,7 +106,7 @@
 
     video, img {
       //noinspection CssInvalidPropertyValue
-      -webkit-mask: linear-gradient(rgba(0, 0, 0, 1.0), transparent);
+      -webkit-mask: linear-gradient(0deg, rgba(255, 255, 255, 0) 0%, rgb(0, 0, 0) 50%, rgb(0, 0, 0) 100%);
     }
 
     .video-container {
