--- a/apps/ui/src/app/pages/setup/nwp-setup.component.html
+++ b/apps/ui/src/app/pages/setup/nwp-setup.component.html
@@ -4,6 +4,12 @@
 <div
   class="center"
 >
-  <h1>Keine Medien Provider gefunden!</h1>
-  <button (click)="installProvider()" color="accent" mat-stroked-button>Provider hinzufügen</button>
+  <h1>Keine Medien gefunden!</h1>
+  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
+    magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
+    gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
+    elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
+    eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
+    dolor sit amet.</p>
+  <button (click)="installPlugin()" color="accent" mat-stroked-button>Plugin installieren</button>
 </div>
