--- a/apps/ui/src/app/elements/nwp-toolbar/nwp-toolbar.component.html
+++ b/apps/ui/src/app/elements/nwp-toolbar/nwp-toolbar.component.html
@@ -91,7 +91,7 @@
     <ng-container *ngTemplateOutlet="searchInput"></ng-container>
     <button
       *ngIf="!isSmall && !isMobile"
-      (click)="showMenu($event)"
+      [matMenuTriggerFor]="menu"
       class="item"
       mat-icon-button
       matTooltip="{{ 'show_more' | translate }}"
@@ -211,3 +211,25 @@
     <button matDialogClose mat-button (click)="playUrl(urlInput.value)">{{'play' | translate}}</button>
     <button matDialogClose mat-button>{{'hide' | translate}}</button>
 </ng-template>
+
+<mat-menu #menu="matMenu">
+  <button mat-menu-item disabled>
+    <span>NWPlay v{{version}}</span>
+  </button>
+  <button (click)="showSettings()" mat-menu-item >
+    <mat-icon>settings</mat-icon>
+    <span>{{'settings' | translate}}</span>
+  </button>
+  <button (click)="toggleFullScreen()" *ngIf="isFullscreen" mat-menu-item>
+    <mat-icon>fullscreen_exit</mat-icon>
+    <span>{{'fullscreen_off' | translate}}</span>
+  </button>
+  <button (click)="toggleFullScreen()" *ngIf="!isFullscreen" mat-menu-item>
+    <mat-icon>fullscreen</mat-icon>
+    <span>{{'fullscreen_on' | translate}}</span>
+  </button>
+  <button (click)="close(true)" mat-menu-item >
+    <mat-icon>close</mat-icon>
+    <span>NWPlay {{'quit' | translate}}</span>
+  </button>
+</mat-menu>
